--- a/SimpleVpn/SimpleVpn.csproj
+++ b/SimpleVpn/SimpleVpn.csproj
@@ -43,15 +43,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Client.cs" />
-    <Compile Include="Constants.cs" />
-    <Compile Include="Mode.cs" />
+    <Compile Include="Comm\Client.cs" />
+    <Compile Include="Comm\Conversation.cs" />
+    <Compile Include="Comm\SocketState.cs" />
+    <Compile Include="Const\Constants.cs" />
+    <Compile Include="Const\Mode.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Server.cs" />
+    <Compile Include="Comm\Server.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Crypto\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
