--- a/SimpleVpn/SimpleVpn.csproj
+++ b/SimpleVpn/SimpleVpn.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Comm\SocketState.cs" />
     <Compile Include="Const\Constants.cs" />
     <Compile Include="Const\Mode.cs" />
+    <Compile Include="Crypto\Secret.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Comm\Server.cs" />
@@ -55,9 +56,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Crypto\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
