--- a/SimpleVpn/SimpleVpn.csproj
+++ b/SimpleVpn/SimpleVpn.csproj
@@ -44,15 +44,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CConsole.cs" />
-    <Compile Include="Comm\Client.cs" />
-    <Compile Include="Comm\Conversation.cs" />
-    <Compile Include="Comm\SocketState.cs" />
-    <Compile Include="Const\Constants.cs" />
-    <Compile Include="Const\Mode.cs" />
-    <Compile Include="Crypto\Secret.cs" />
+    <Compile Include="Comms\Client.cs" />
+    <Compile Include="Comms\Conversation.cs" />
+    <Compile Include="Comms\SocketState.cs" />
+    <Compile Include="Constants\Constants.cs" />
+    <Compile Include="Constants\Mode.cs" />
+    <Compile Include="Crypto\Cipher.cs" />
+    <Compile Include="Handshake\Message.cs" />
+    <Compile Include="Handshake\Payload.cs" />
+    <Compile Include="Handshake\Sender.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Comm\Server.cs" />
+    <Compile Include="Comms\Server.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
