--- a/SimpleVpn/SimpleVpn.csproj
+++ b/SimpleVpn/SimpleVpn.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Constants\Constants.cs" />
     <Compile Include="Constants\Mode.cs" />
     <Compile Include="Crypto\Cipher.cs" />
+    <Compile Include="Crypto\DiffieHellman.cs" />
     <Compile Include="Handshake\Message.cs" />
     <Compile Include="Handshake\Payload.cs" />
     <Compile Include="Handshake\Sender.cs" />
