--- a/SimpleVpn/SimpleVpn.csproj
+++ b/SimpleVpn/SimpleVpn.csproj
@@ -47,6 +47,7 @@
     <Compile Include="CConsole.cs" />
     <Compile Include="Comms\Client.cs" />
     <Compile Include="Comms\Conversation.cs" />
+    <Compile Include="Comms\Handshake.cs" />
     <Compile Include="Comms\SocketState.cs" />
     <Compile Include="Constants\Constants.cs" />
     <Compile Include="Constants\Mode.cs" />
